Add sbin folder for root cmd

--- a/builds/.env-debian
+++ b/builds/.env-debian
@@ -8,6 +8,7 @@ export ROOT="builds/debian"
 export ETC="$ROOT/etc"
 export USR="$ROOT/usr"
 export BIN="$USR/bin"
+export SBIN="$USR/sbin"
 export SHARE="$USR/share"
 export DOC="$SHARE/bin"
 export ANSIBLE_ROLES="$ETC/ansible/roles"
