--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/webserver-deployer"]
 	path = src/webserver-deployer
-	url = https://github.com/demmonx/webserver-deployer.git
+	url = https://github.com/demmonx/webserver-deployer
