edit install process

--- a/builds/.env-debian
+++ b/builds/.env-debian
@@ -1,6 +1,6 @@
 export MODULE_NAME="webserver-deployer"
 
-export SRC_MODULE="src/$MODULE_NAME"
+export SRC_MODULE="src/$MODULE_NAME/src"
 export OUTPUT="generated"
 
 # builds folders 
