Edit dependencies & postinst

--- a/builds/.env-debian
+++ b/builds/.env-debian
@@ -1,7 +1,7 @@
 export MODULE_NAME="webserver-deployer"
 
 export SRC_MODULE="src/$MODULE_NAME/src"
-export OUTPUT="generated"
+export OUTPUT="releases"
 
 # builds folders 
 export ROOT="builds/debian"
