Split build for debian & rpm

--- a/.env
+++ b/.env
@@ -2,9 +2,12 @@ export MODULE_NAME="webserver-deployer"
 
 export SRC_MODULE="src/$MODULE_NAME/src"
 export OUTPUT="releases"
+export BUILD_OUTPUT="builds/build.tar.gz"
+export DEBIAN_FOLDER="builds/debian"
+export RPM_FOLDER="builds/rpm"
 
 # builds folders 
-export ROOT="builds/debian"
+export ROOT="builds/build"
 export ETC="$ROOT/etc"
 export USR="$ROOT/usr"
 export BIN="$USR/bin"
