--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ export USR="$ROOT/usr"
 export BIN="$USR/bin"
 export SBIN="$USR/sbin"
 export SHARE="$USR/share"
-export DOC="$SHARE/bin"
+export DOC="$SHARE/doc"
 export ANSIBLE_ROLES="$ETC/ansible/roles"
 
 # Public folders
