Builder correction + debian packager correction + New deb with doc

--- a/.env
+++ b/.env
@@ -7,13 +7,13 @@ export DEBIAN_FOLDER="builds/debian"
 export RPM_FOLDER="builds/rpm"
 
 # builds folders 
-export ROOT="builds/build"
+export ROOT="build"
 export ETC="$ROOT/etc"
 export USR="$ROOT/usr"
 export BIN="$USR/bin"
 export SBIN="$USR/sbin"
 export SHARE="$USR/share"
-export DOC="$SHARE/doc"
+export DOC="$SHARE/man/man1"
 export ANSIBLE_ROLES="$ETC/ansible/roles"
 
 # Public folders
