RPM packager without requirements

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ export SRC_MODULE="src/$MODULE_NAME/src"
 export OUTPUT="releases"
 export BUILD_OUTPUT="builds/build.tar.gz"
 export DEBIAN_FOLDER="builds/debian"
-export RPM_FOLDER="builds/rpm"
+export RPM_FOLDER=$(pwd)"/builds/rpm"
 
 # builds folders 
 export ROOT="build"
